Thu Jan  6 16:10:20 CET 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in gamin.spec.in: preparing release 0.0.20
	* doc/gamin.html doc/news.html: update to the web pages
	* server/gam_poll.c: trying to fix gnome bug #161792 compilation
	  problem.

Wed Jan  5 18:40:50 CET 2005 Frederic Crozat  <fcrozat@mandrakesoft.com>

	* server/gam_poll.c: (remove_directory_subscription), (prune_tree):
	Fix crash when removing files (bug #161902).

Wed Jan  5 18:32:45 CET 2005 Frederic Crozat  <fcrozat@mandrakesoft.com>

	* server/gam_poll.c: (prune_tree), (gam_poll_scan_all_callback):
	Update poll only mode to a working, non-crashing version.

Wed Jan  5 16:46:15 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: patch from Frederic Crozat to add poll only
	  support (helps with valgrind debugging).

Tue Dec 21 17:15:24 CET 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_tree.c: try to fix #143342 in gam_tree_get_children if
	  tree and root are NULL.

Mon Dec  6 13:54:11 CET 2004 Daniel Veillard <veillard@redhat.com>

	* NEWS doc/gamin.html doc/news.html: updated and rebuilt pages.

Fri Dec  3 16:39:35 CET 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release of 0.0.19

Fri Dec  3 16:10:03 CET 2004 Daniel Veillard <veillard@redhat.com>

	* server/Makefile.am server/gam_debug_lists.c: adding our own
	  reduced version of glib glist.c with simplified memory allocation
	  and poisonning of deleted list nodes to chase #132354.
	* server/gam_connection.c server/gam_node.c server/gam_poll.c:
	  more review and simplifiction of the use of GList APIs.

Fri Dec  3 12:10:50 CET 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_connection.c server/gam_node.c server/gam_poll.c
	  server/gam_tree.c: avoid gam_node_append as it is O(n)

Thu Dec  2 18:46:09 CET 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_connection.c server/gam_listener.c server/gam_server.c